# simple-chess

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  changelog.md  readme.md
.github/workflows/: alpine.yml  alpine_arm.yml  build-clang.yml  build-gcc.yml  clang.yml  gcc.yml  msvc.yml  msys2.yml
algorithm/: Apply.cpp  Apply.hpp
apps/: CMakeLists.txt  readme.md  readme_package.md  third-party.md
apps/engine/: CMakeLists.txt  Command.hpp  Engine.cpp  Engine.hpp  engine.cbp  io-utils.cpp  main.cpp  readme.md
apps/engine/time/: Clock.cpp  Timing.hpp
apps/engine/uci/: CommandParser.cpp  Go.cpp  Go.hpp  Move.cpp  Move.hpp  NewGame.cpp  Position.cpp  Position.hpp  Uci.cpp
apps/engine/xboard/: CommandParser.cpp  CommandParser.hpp  Error.hpp  Go.hpp  Level.cpp  New.cpp  NoOperation.cpp  Ping.cpp  ProtocolVersion.cpp  Quit.hpp  ResultCmd.cpp  ResultCmd.hpp  SetBoard.cpp  SetBoard.hpp  SetDepth.cpp  SetDepth.hpp  SetTime.hpp  Usermove.cpp  Usermove.hpp  Xboard.cpp
apps/meteor-chess-client/: CMakeLists.txt  Options.cpp  Options.hpp  main.cpp  meteor-chess-client.cbp  readme.md
apps/pgn-reader/: CMakeLists.txt  Options.cpp  Options.hpp  main.cpp  pgn-reader.cbp  readme.md
apps/pgn-reader-with-meteor-chess/: CMakeLists.txt  readme.md
apps/pgn-reader/examples/: maya1978.pgn  readme.md  steinitz1887.pgn
apps/simple-chess-cli/: CMakeLists.txt  main.cpp  readme.md  simple-chess-cli.cbp
ci/: cpplint.sh
competing-evaluators/: CMakeLists.txt  CompetitionData.cpp  CompetitionData.hpp  competing-evaluators.cbp  competing.cpp  competing.hpp  main.cpp
data/: Board.cpp  Board.hpp  Castling.cpp  Castling.hpp  Field.cpp  Field.hpp  ForsythEdwardsNotation.cpp  ForsythEdwardsNotation.hpp  HalfMove.cpp  HalfMove.hpp  Piece.cpp  Piece.hpp  PortableGameNotation.cpp  PortableGameNotation.hpp  Result.cpp  Result.hpp  Ternary.hpp  board.cpp  board.hpp  castling.cpp  castling.hpp  colour.hpp  field.cpp  field.hpp  forsyth-edwards-notation.cpp  forsyth-edwards-notation.hpp  halfmove.cpp  halfmove.hpp  piece.cpp  piece.hpp  portable-game-notation.cpp  portable-game-notation.hpp
db/mongo/: BSON.cpp  BSON.hpp  (+9 more)
dev/: CMakeLists.txt
dev/competing-evaluators/: CMakeLists.txt  CompetitionData.cpp  CompetitionData.hpp  competing-evaluators.cbp  competing.cpp  competing.hpp  main.cpp
documentation/: .gitignore  Doxyfile  readme.md
engine/: CMakeLists.txt  Command.hpp  CommandParser.cpp  CommandParser.hpp  Engine.cpp  Engine.hpp  ParseLoop.hpp  Protocol.cpp  Protocol.hpp  engine.cbp  io-utils.cpp  io-utils.hpp  main.cpp  readme.md
engine/time/: Clock.cpp  Clock.hpp  TimeControlMode.hpp  Timing.cpp  Timing.hpp
engine/uci/: CommandParser.cpp  CommandParser.hpp  Go.hpp  IsReady.cpp  IsReady.hpp  Move.cpp  Move.hpp  NewGame.cpp  NewGame.hpp  Position.cpp  Position.hpp  Quit.hpp  Uci.cpp  Uci.hpp
engine/xboard/: Command.hpp  CommandParser.cpp  Draw.cpp  Draw.hpp  Error.cpp  Error.hpp  ExactTime.cpp  ExactTime.hpp  Force.cpp  Force.hpp  Go.cpp  Go.hpp  Level.cpp  Level.hpp  New.cpp  New.hpp  NoOperation.cpp  NoOperation.hpp  Ping.cpp  Ping.hpp  ProtocolVersion.cpp  ProtocolVersion.hpp  Quit.cpp  Quit.hpp  ResultCmd.cpp  ResultCmd.hpp  SetBoard.cpp  SetBoard.hpp  SetDepth.cpp  SetDepth.hpp  SetTime.cpp  SetTime.hpp  Usermove.cpp  Usermove.hpp  Xboard.hpp
evaluation/: CastlingEvaluator.cpp  CastlingEvaluator.hpp  CheckEvaluator.cpp  CheckEvaluator.hpp  CompoundCreator.cpp  CompoundCreator.hpp  CompoundEvaluator.cpp  CompoundEvaluator.hpp  Evaluator.hpp  LinearMobilityEvaluator.cpp  LinearMobilityEvaluator.hpp  MaterialEvaluator.cpp  MaterialEvaluator.hpp  MobilityEvaluator.cpp  MobilityEvaluator.hpp  PromotionEvaluator.cpp  PromotionEvaluator.hpp  RootMobilityEvaluator.cpp  RootMobilityEvaluator.hpp
meteor-chess-client/: CMakeLists.txt  Options.cpp  Options.hpp  main.cpp  meteor-chess-client.cbp  readme.md
mongo-client/: main.cpp  mongo-client.cbp
pgn/: Parser.cpp  Parser.hpp  ParserException.hpp  Token.cpp  Token.hpp  TokenType.hpp  Tokenizer.cpp  UnconsumedTokensException.cpp  UnconsumedTokensException.hpp  pgn-syntax.txt  token.cpp
pgn-reader/: CMakeLists.txt  Options.cpp  Options.hpp  example.pgn  main.cpp  pgn-reader.cbp  readme.md
pgn-reader-with-meteor-chess/: CMakeLists.txt  readme.md
pgn-reader/examples/: paehtz_lindgren_bundesliga2017.pgn  world_blitz_women_2016.pgn
rules/: Moves.cpp  Moves.hpp  check.cpp  check.hpp  moves.cpp  moves.hpp
search/: Node.cpp  Node.hpp  Search.cpp  Search.hpp
simple-chess-cli/: CMakeLists.txt  main.cpp  readme.md  simple-chess-cli.cbp
speedbench/: CMakeLists.txt  main.cpp  speedbench.cbp
tests/: CMakeLists.txt  locate_catch.hpp  readme.md
tests/apps/: CMakeLists.txt
tests/apps/engine/: CMakeLists.txt  parameter-misuse.cmd  parameter-misuse.sh
tests/apps/meteor-chess-client/: CMakeLists.txt  parameter-misuse.sh
tests/apps/pgn-reader/: CMakeLists.txt  parameter-misuse-with-meteor.sh  parameter-misuse.cmd  parameter-misuse.sh
tests/apps/simple-chess-cli/: CMakeLists.txt  parameter-misuse.cmd  parameter-misuse.sh
tests/boost/: CMakeLists.txt  boost.cbp  main.cpp
tests/catch/: CMakeLists.txt  catch.cbp  main.cpp  suiteFEN.cpp  suitePGN.cpp  testsFEN.cpp  testsPGN.cpp
tests/catch/data/: testsBoard.cpp  testsCastling.cpp  testsField.cpp  testsForsythEdwardsNotation.cpp  testsHalfMove.cpp  testsPiece.cpp  testsResult.cpp
tests/catch/evaluation/: ConstantEvaluator.cpp  ConstantEvaluator.hpp  testsCastlingEvaluator.cpp  testsCheckEvaluator.cpp  testsCompoundCreator.cpp  testsCompoundEvaluator.cpp  testsLinearMobilityEvaluator.cpp  testsMaterialEvaluator.cpp  testsMobilityEvaluator.cpp  testsPromotionEvaluator.cpp  testsRootMobilityEvaluator.cpp
tests/catch/rules/: testsCheck.cpp  testsMoves.cpp
tests/catch/search/: testsSearch.cpp
tests/catch/util/: testsStrings.cpp
tests/engine/: CMakeLists.txt  engine-tests.cbp  main.cpp
tests/engine/xboard/: CommandParser.cpp
ui/: Console.cpp  Console.hpp
util/: GitInfos.hpp  GitInfos.template.cpp  ReturnCodes.hpp  Version.cpp  Version.hpp  strings.cpp  strings.hpp
(+80 files in other folders)
